Sept 14, 2001: Alex Burger <alex@fragit_dot_net>
- Added docs/xqfdocs.html
- Added new NEWS file from Jordi 

Sept 10, 2001: Alex Burger <alex@fragit_dot_net>
- Added Jordi Mallach's man page - xqf.6 and modified Makefile.am
- Added 'General' Preferences page and moved most of 'Appearance'
  to 'General' page.

Sept 5, 2001: Alex Burger <alex@fragit_dot_net>
- Patch by  Ludwig Nussel ludwig.nussel@gmx.de to add German
  translation and some code fixes.

Aug 19, 2001: Bill Adams <bill@evilbill.org>
- Removed BUILD_INCLUDED_LIBINTL from intl/Makefile.pm and replaced it with
  USE_INCLUDED_LIBINTL as that is the only variable defined in gettext.m4 for
  gettext 0.10.35.
- Patch by  Ludwig Nussel ludwig.nussel@gmx.de to fix some of the
  q3a game types, options for setting fs_game on the command line and
  r3a hack for the vm_* settings.
  
Aug 9, 2001: Alex Burger <alex@fragit_dot_net>
-Changed Quake3 protocol version to 66 to support
 latest Quake3 patch.  Change located in game.c

July 07, 2001, Bill Adams <bill@evilbill.org>
- Added "Game Type" filter.  Now you can filter on 
  CTF, TDM, etc. and the mod.
- Merged Jordi's changes (see below).
  
June 8, 2001, Jordi Mallach <jordi@sindominio.net>
- Big internationalization patch for XQF.
  Adds intl/ and po/ subdirs, and adds the gettext marks
  to every .c that needs it. Modified configure.in and 
  the Makefile.am's to support gettext. From now on,
  every string in the code should be wrapped inside
  gettext() calls, and .c's should add a <libintl.h>
  if they don't have it already.
  Some issues with the current code remain (untranslatable
  strings), thats a work in progress.
- Initial, incomplete Spanish translation (po/es.po).
- changed configure.in so it barfs about qstat << 2.4c.

June 5, 2001: Alex Burger <alex@fragit_dot_net>
-Tribes 2 games can now be launched.  Created a t2_exec
 function. If a name is specified in Player Profile, it 
 is used on the command line to log in.  This would only