@@ -1,0 +1,22 @@
+/* XPM */
+static char * wo_xpm[] = {
+"17 17 2 1",
+" 	c None",
+".	c #603000",
+"                 ",
+"      .   .      ",
+"      .. ..      ",
+"      .. ..      ",
+"..... .   . .....",
+"   .  .   .  .   ",
+" ......   ...... ",
+"                 ",
+"  ....  .  ....  ",
+"     .  .  .     ",
+"     .  .  .     ",
+"     .  .  .     ",
+"     . .. ..     ",
+"     .. .. .     ",
+"     .  .  .     ",
+"        .        ",
+"                 "};
