@@ -1,3 +1,8 @@
+Sept 19, 2001: Alex Burger <alex@fragit_dot_net>
+- Added Wolfenstein support.  Currently uses q3_exec to launch
+  the game, but will change when Wolf client for Linux is released.
+  Uses qstat as if it's a Quake2 server
+
 Sept 14, 2001: Alex Burger <alex@fragit_dot_net>
 - Added docs/xqfdocs.html
 - Added new NEWS file from Jordi 
